--- a/templates/timesheet/entry.html
+++ b/templates/timesheet/entry.html
@@ -24,11 +24,11 @@
             </div>
             <input type="text" class="form-control" name="abas_ID" id="abas_ID" aria-label="Abas User ID Input" aria-describedby="inputGroup-sizing-default" value="{{ abasID }}">
             <div class="input-group-append">
-                <button class="btn btn-abas" type="submit" id="btn-abasid">Lookup</button>
+                <button class="btn btn-abas" type="submit" name="button" id="btn-abasid" value="btn-abasid">Lookup</button>
               </div>
           </div>
 
-    </form> 
+    <!-- </form>  -->
     <!-- 
     {{ abasUser}}
     ID = 0
@@ -54,26 +54,30 @@
         </div>
     </div>
      
-    <form >
-        <div class="input-group date-group">
+    <!-- <form method="post"> -->
+        <div class="input-group">
             <div class="input-group-prepend">
-            <button class="btn btn-abas" type="button" id="btnPrev">Prev</button>          
-            <span class="input-group-text" id="startDate">{{ startOfPrevWeek }}</span>
-        </div>
-        <!-- <input id="startDate" type="text" class="form-control text-center" placeholder="" aria-label="" aria-describedby="btnPrev" value="{{ startOfPrevWeek }}" readonly> -->
-        <!-- <input id="endDate" type="text" class="form-control text-center" placeholder="" aria-label="" aria-describedby="btnNext" value="{{ endOfPrevWeek }}" readonly>         -->
-        <div class="input-group-append">
-            <span class="input-group-text" id="endDate">{{ endOfPrevWeek }}</span>        
-            <button class="btn btn-abas" type="button" id="btnNext">Next</button>
+                <button class="btn btn-abas" type="submit" name="button" id="btnPrev" value="btnPrev"><<</button>          
+                <span class="input-group-text" id="startDate">{{ startOfPrevWeek }}</span>
+            </div>
+            <input type="hidden" name="startDate" id="startDateInput" value="{{ startOfPrevWeek }}">
+            <input type="hidden" name="endDate" id="startDateInput" value="{{ endOfPrevWeek }}">
+            <!-- <input id="startDate" type="text" class="form-control text-center" placeholder="" aria-label="" aria-describedby="btnPrev" value="{{ startOfPrevWeek }}" readonly> -->
+            <!-- <input id="endDate" type="text" class="form-control text-center" placeholder="" aria-label="" aria-describedby="btnNext" value="{{ endOfPrevWeek }}" readonly>         -->
+            <div class="input-group-append">
+                <span class="input-group-text" id="endDate">{{ endOfPrevWeek }}</span>        
+                <button class="btn btn-abas" type="submit" name="button" id="btnNext" value="btnNext">>></button>
+                <button class="btn btn-abas" type="submit" name="button" id="btnToday" value="btnToday">Today</button>
             </div>
         </div>
+        <p></p>
     </form>
 
     <!-- Timecard Section -->
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 g-4" id="timecard">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 g-4 px-2" id="timecard">
         <!-- Card 1 -->
         {% for date in dateRangePrevWeek %}
-        <div id="card_{{ date.replace('/', '_') }}" class="col my-2">
+        <div id="card_{{ date.replace('/', '_') }}" class="col my-2 px-2">
             <div class="card bg-light border-dark card-shadow">
                 <div class="card-header text-center 
                     {% if date | dateformat('%A') in ['Saturday', 'Sunday'] %}
@@ -84,17 +88,22 @@
                 ">
                     {{ date }} - {{ date | dateformat("%A") }}
                 </div>
-                <div class="card-body">                                    
-                {% if timecard_data[date] %}
-                    {% for t in timecard_data[date] %}
-                    <div class="d-flex justify-content-between">
-                        <p>{{ t.WSNumber }} <br> {{ t.OpNameExtended }}</p>
-                        <h5><span class="badge badge-secondary">{{ t.tHoursWorked }}</span></h5>
-                    </div>
-                    {% endfor %}
-                {% else %}
-                    <p>No data available for this date.</p>
-                {% endif %}
+                <div class="card-body compact-card">
+                    {% set ns = namespace(total_hours=0) %} <!-- Create a mutable namespace object -->
+                    {% if timecard_data[date] %}
+                        {% for t in timecard_data[date] %}
+                        <div class="d-flex justify-content-between">
+                            <p>{{ t.WSNumber }} {{ t.OpNameExtended }}</p>
+                            <h5><span class="badge badge-secondary">{{ t.tHoursWorked }}</span></h5>
+                        </div>
+                        {% set ns.total_hours = ns.total_hours + t.tHoursWorked %} <!-- Accumulate the total -->
+                        {% endfor %}
+                    {% else %}
+                        <p>No data available for this date.</p>
+                    {% endif %}
+                </div>
+                <div class="card-footer compact-card-footer text-right">
+                    <small>Total Hours: <span class="font-weight-bold">{{ ns.total_hours }}</span></small> <!-- Display the total hours -->
                 </div>
             </div>
         </div>
