--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -1,23 +1,35 @@
 {% extends 'base.html' %}
 {% block title %}Register{% endblock %}
+{% block nav_login %}active{% endblock %}
 {% block header %}
 
 {% endblock %}
-
+{% block subheader %}
+<nav aria-label="breadcrumb" class="breadcrumb-bg">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="{{ url_for('home') }}">Home</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Registration</li>
+    </ol>
+</nav>
+<p></p>
+{% endblock %}
 {% block content %}
+<div class="login-container">
   <form method="post">
-    <div class="row mb-2">
-      <label class="col-sm-auto col-form-label" for="username">Username</label>
-      <div class="col-sm-3">
-        <input class="form-control" name="username" id="username" required>
+    <div class="form-floating mb-3">
+      <label for="username">AbasID</label>
+      <input class="form-control" name="username" id="username" required>
+    </div>
+    <div class="form-floating mb-3">
+      <label for="password">Password</label>
+      <input class="form-control" type="password" name="password" id="Password" required>
+    </div>
+    <div class="d-flex justify-content-between">
+      <div>
+        <button class="btn btn-abas" type="submit" value="Register">Register</button>
+        <a class="btn btn-secondary" role="button" href="/">Cancel</a>
       </div>
     </div>
-    <div class="row mb-2">
-      <label class="col-sm-auto col-form-label" for="password">Password</label>
-      <div class="col-sm-3">
-        <input class="form-control" type="password" name="password" id="password" required>
-      </div>
-    </div>
-    <button class="btn btn-primary" type="submit" value="Register">Register</button><a class="btn btn-secondary" role="button" href="/">Cancel</a>
   </form>
+</div>
 {% endblock %}
