--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -24,6 +24,7 @@
       <label class="form-label" for="password">Password</label>
       <input class="form-control" type="password" name="password" id="password" required>
     </div> -->
+    <input type="hidden" name="next" value="{{ next }}">
     <div class="form-floating mb-3">
       <label for="username">AbasID</label>
       <input class="form-control" name="username" id="username" required>
