--- a/templates/timesheet/entry.html
+++ b/templates/timesheet/entry.html
@@ -5,11 +5,16 @@
 {% endblock %}
 {% block subheader %}
 <nav aria-label="breadcrumb" class="breadcrumb-bg">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="{{ url_for('home') }}">Home</a></li>
-        <li class="breadcrumb-item"><a href="{{ url_for('timesheet.index') }}">Timesheet</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Entry</li>
-    </ol>
+    <div class="d-flex justify-content-between align-items-center">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="{{ url_for('home') }}">Home</a></li>
+            <li class="breadcrumb-item"><a href="{{ url_for('timesheet.index') }}">Timesheet</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Entry</li>
+        </ol>
+        {% if g.user %}
+        <span class="text-muted pr-2">{{ g.user.EmpName.title() }}</span>
+        {% endif %}
+    </div>
 </nav>
 <p></p>
 {% endblock %}
@@ -22,7 +27,7 @@
             <div class="input-group-prepend">
               <span class="input-group-text" id="inputGroup-sizing-default">Abas User ID</span>
             </div>
-            <input type="text" class="form-control" name="abas_ID" id="abas_ID" aria-label="Abas User ID Input" aria-describedby="inputGroup-sizing-default" value="{{ abasID }}">
+            <input type="text" class="form-control" name="abas_ID" id="abas_ID" aria-label="Abas User ID Input" aria-describedby="inputGroup-sizing-default" value="{{ abasID if abasID else g.user.EmpID }}">
             <div class="input-group-append">
                 <button class="btn btn-abas" type="submit" name="button" id="btn-abasid" value="btn-abasid">Lookup</button>
               </div>
