--- a/templates/timesheet/index.html
+++ b/templates/timesheet/index.html
@@ -6,10 +6,15 @@
 {% endblock %}
 {% block subheader %}
 <nav aria-label="breadcrumb" class="breadcrumb-bg">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="{{ url_for('home') }}">Home</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Timesheet</li>
-    </ol>
+    <div class="d-flex justify-content-between align-items-center">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="{{ url_for('home') }}">Home</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Timesheet</li>
+        </ol>
+        {% if g.user %}
+        <span class="text-muted pr-2">{{ g.user.EmpName.title() }}</span>
+        {% endif %}
+    </div>
 </nav>
 <p></p>
 {% endblock %}
