add holiday time visibility to holiday cards.

--- a/templates/timesheet/entry.html
+++ b/templates/timesheet/entry.html
@@ -108,7 +108,15 @@
                         {% set ns.total_hours = ns.total_hours + t.tHoursWorked %} <!-- Accumulate the total -->
                         {% endfor %}
                     {% else %}
-                        <p>No data available for this date.</p>
+                        {% if day.isHoliday %}
+                            <div class="d-flex justify-content-between">
+                                <p class="font-italic">Holiday Hours</p>
+                                <h5><span class="badge badge-secondary font-italic">8.0</span></h5>
+                                {% set ns.total_hours = ns.total_hours + 8.0 %} <!-- Accumulate the total -->
+                            </div>
+                        {% else %}
+                            <p>No data available for this date.</p>
+                        {% endif %}
                     {% endif %}
                 </div>
                 <div class="card-footer compact-card-footer text-right">
