fixed modal close button

--- a/templates/timesheet/_ws.html
+++ b/templates/timesheet/_ws.html
@@ -17,18 +17,15 @@
     <div class="modal-content">
       <div class="modal-header bg-dark-custom">
         <h5 class="modal-title" id="myModalLabel">Details</h5>
-        <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
-        </button> -->
+        </button>
       </div>
       <div class="modal-body">
         <p><span id="mProject"></span> - <span id="mProjectDesc"></span></p>
         <p>WO<span id="mWO"></span> - <span id="mWODesc"></span></p>
         <p><span id="mOpName"></span> (<small id="mOpName2"></small>)</p>
         <p>OpCode - <span id="mOpID"></span></p>
-      </div>
-      <div class="modal-footer bg-dark-custom">
-
       </div>
     </div>
   </div>
