--- a/static/style.css
+++ b/static/style.css
@@ -15,27 +15,6 @@ body {
 #bodyContainer {
     flex: 1;
 }
-/* @media screen and (min-width: 300px) and (orientation: portrait) {
-    body {
-        background: url("/static/images/kasa50thlogoVsm2.png") no-repeat center;
-    }
-}
-@media screen and (min-width: 600px) and (orientation: landscape) {
-    body {
-        background: url("/static/images/kasa50thlogoSm2.png") no-repeat center;
-    }
-}
-@media screen and (min-width: 800px) and (orientation: portrait) {
-    body {
-        background: url("/static/images/kasa50thlogoV.png") no-repeat center;
-    }
-}
-@media screen and (min-width: 1000px) and (orientation: landscape) {
-    body {
-        background: url("/static/images/kasa50thlogo.png") no-repeat center;
-    }
-} */
-
 
 /* a { color: #377ba8; } */
 a { color: #009FAA; }
@@ -46,30 +25,11 @@ a { color: #009FAA; }
 .navbar-dark .navbar-nav .nav-link {
     color: #009FAA;
 }
-/* h1 { font-family: serif; color: #377ba8; margin: 1rem 0; }
-hr { border: none; border-top: 1px solid lightgray; }
-nav { display: flex; align-items: center; padding: 0 1rem; }
-nav h1 { flex: auto; margin: 0; }
-nav h1 a { text-decoration: none; padding: 0.25rem 0.5rem; }
-nav ul  { display: flex; list-style: none; margin: 0; padding: 0; }
-nav ul li a, nav ul li span, header .action { display: block; padding: 0.5rem;}
 
-.content { padding: 0 1rem 1rem;} */
-
-/* .content > header { border-bottom: 1px solid lightgray; display: flex; align-items: flex-end; } */
-/* .content > header h2 h4 { flex: auto; margin: 1rem 0; } */
-/* .content > header a { margin: 1rem 0.5rem; } */
-
-/* header { color: lightgray; }
-header h2 h4 { flex: auto; margin: 0 0; }
-header a { margin: 1rem 0.5rem; } */
-.flash { margin: 1em 0; padding: 1em; background: #cae6f6; border: 1px solid #377ba8; }
-/* .content form { margin: 0.5em 0; }
-.content form a { margin: 0.5em; } 
-.content td a { padding: 0.1rem 0.6rem; }
-.content td { padding-top: 1rem; } */
+/* .flash { margin: 1em 0; padding: 1em; background: #cae6f6; border: 1px solid #377ba8; } */
 .container-fluid { padding: 0 .5rem; }
 .content form { margin: 0.25em 0; }
+
 .list-group-item.padding-custom {
     padding-top: 1rem;
     padding-bottom: 1rem;
