update the button size on the timesheet index and lookup pages

--- a/templates/timesheet/lookup.html
+++ b/templates/timesheet/lookup.html
@@ -36,7 +36,7 @@
         <form method="post" id="fProject">    
             <input type="hidden" name="form_id" value="fProject">
             <div class="dropdown bootstrap-select form-control">
-                <select class="selectpicker form-control" id="plist" data-style="btn-abas border-dark btn-lg" data-width="100%" data-size="10" data-container="body" data-live-search="true" title="Select a Project" >
+                <select class="selectpicker form-control" id="plist" data-style="btn-abas border-dark" data-width="100%" data-size="10" data-container="body" data-live-search="true" title="Select a Project" >
                     <!-- <option class="bs-title-option" value=""></option> -->
                     <!-- <option disabled selected value> ---- </option> -->
                     {% for p in projects %}
