--- a/templates/timesheet/_wo.html
+++ b/templates/timesheet/_wo.html
@@ -1,7 +1,7 @@
 <form method="post" id="fWO">
     <input type="hidden" name="form_id" value="fWO">
     <div class="dropdown bootstrap-select form-control">
-        <select class="selectpicker form-control" id="wolist" data-style="btn-abas border-dark btn-lg" data-container="body" data-live-search="true" title="Select a Work Order" >
+        <select class="selectpicker form-control" id="wolist" data-style="btn-abas border-dark" data-container="body" data-live-search="true" title="Select a Work Order" >
             {% for w in workorders %}
             <option class="lead" value="{{ w.WONumber }}">{{ w.WONumber }} - {{ w.WOPart }} - {{ w.WODescription }}</option>    
             {% endfor %}
