--- a/templates/timesheet/index.html
+++ b/templates/timesheet/index.html
@@ -21,8 +21,8 @@
 {% block content %}
 <div class="align-items-center justify-content-center text-center">
     <p></p>
-    <p><a href="{{ url_for('timesheet.entry') }}" class="btn btn-abas btn-lg btn-block btn-max-width-400" role="button">Timesheet Entry</a></p>
+    <p><a href="{{ url_for('timesheet.entry') }}" class="btn btn-abas btn-block btn-max-width-400" role="button">Timesheet Entry</a></p>
     <p></p>
-    <p><a href="{{ url_for('timesheet.lookup') }}" class="btn btn-abas btn-lg btn-block btn-max-width-400" role="button">Timesheet Operation Lookup</a></p>
+    <p><a href="{{ url_for('timesheet.lookup') }}" class="btn btn-abas btn-block btn-max-width-400" role="button">Timesheet Operation Lookup</a></p>
 </div>
 {% endblock %} <!-- end content block -->
