--- a/templates/admin/employees.html
+++ b/templates/admin/employees.html
@@ -38,10 +38,11 @@
                     <th>Name</th>
                     <th>Dept</th>
                     <th>Supervisor</th>
-                    <th>Wage<br>Group</th>
-                    <th>Admin</th>
+                    <th>Wage<br>Group</th>                    
+                    <th>Hourly</th>
                     <th>PayChex</th>
                     <th>Salary Plus<br>Start</th>
+                    <th>Admin</th>
                     <th>Actions</th>
                 </tr>
             </thead>
@@ -56,7 +57,7 @@
                         <td>{{ employee.Supervisor }}</td>
                         <td>{{ employee.Wagegroup }}</td>
                         <td>
-                            <input type="checkbox" name="isAdmin" {% if employee.isAdmin %}checked{% endif %}>
+                            <input type="checkbox" name="isHourly" {% if employee.isHourly %}checked{% endif %}>
                         </td>
                         <td>
                             <select name="PayChexID" class="form-control">
@@ -70,6 +71,9 @@
                         </td>
                         <td>
                             <input type="number" name="SalaryPlusStart" value="{{ employee.SalaryPlusStart or '' }}" class="form-control">
+                        </td>
+                        <td>
+                            <input type="checkbox" name="isAdmin" {% if employee.isAdmin %}checked{% endif %}>
                         </td>
                         <td>
                             <input type="hidden" name="EmpID" value="{{ employee.EmpID }}">
